syntax = "proto3";
package spacemesh.v1;
option go_package = "github.com/spacemeshos/api/release/go/spacemesh/v1";
import "debug_types.proto";
import "google/protobuf/empty.proto";

// DebugService exposes methods used for mostly debugging and tests
// NOTE: The endpoints in this service are experimental and subject to change without notice.
// They should not be used in production.
service DebugService {

    // NetworkInfo returns p2p network information. Mostly required for integration with deployment 
    // and testing tooling.
    rpc NetworkInfo(google.protobuf.Empty) returns (NetworkInfoResponse);

    // Accounts returns data for all the accounts currently in the node's current global state.
    // This includes each account's address, nonce and balance but excludes projection of account state.
    rpc Accounts (AccountsRequest) returns (AccountsResponse);

    // ActiveSet returns the active set used by hare in a given epoch.
    rpc ActiveSet(ActiveSetRequest) returns (ActiveSetResponse);

    // ProposalsStream streams all proposals that are confirmed by hare.
    rpc ProposalsStream(google.protobuf.Empty) returns (stream Proposal);
}
